<resources>
    <string name="app_name">HomeWork2</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="comma">,</string>
    <string name="multiply">*</string>
    <string name="divide">%</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="clear">Clear</string>
    <string name="SwitchThemeBtn">Switch Theme</string>
    <string name="themenight">ThemeNight</string>
    <string name="themeday">Theme Day</string>
</resources>